<resources>
    <string name="app_name">SaveUp</string>
    <string name="login_log">Your Easy Personal Fiance Manager </string>
    <string name="login_email">Email </string>
    <string name="login_password">Password </string>
    <string name="login_button">Login </string>
    <string name="profile_title">profile page </string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="logo">logo</string>
    <string name="title_activity_form_acitivity">FormAcitivity</string>
...
    <string name="list_text_type">Type : </string>
    <string name="list_text_date">Date : </string>
    <string name="list_text_description">Description : </string>
    <string name="list_text_amount">Amount : </string>

    // form activity
    <string name="tab_text_1">Income</string>
    <string name="tab_text_2">Expense</string>
    <string name="text_euro">EUR</string>
    <string name="text_date">Date</string>
    <string name="text_account">Account</string>
    <string name="text_category">Category</string>
    <string name="text_description">Description</string>
    <string name="save_button">Save</string>
    <string name="date_placeholder">TT.MM.JJJJ</string>
    <string name="tags_button_expense">Tags</string>
    <string name="tags_button_income">Tags</string>
    <string name="string_salary">Salary</string>
    <string name="string_gifts">Gifts</string>
    <string name="string_payback">Payback</string>
    <string name="string_car">Car</string>
    <string name="string_groceries">Groceries</string>
    <string name="string_personal_hygiene">Personal Hygiene</string>
    <string name="string_cleaning_products">Cleaning Products</string>
    <string name="string_clothes">Clothes</string>
    <string name="string_rent">Rent</string>
    <string name="string_luxury">Luxury</string>
...
