<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/form_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/adds_form"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- dummy element to prevent autofocus filter input -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:id="@+id/filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_label"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_description"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/filter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:inputType="text"
        android:hint="@string/filter_description_hint"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_label" />

    <LinearLayout
        android:id="@+id/filter_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_description"
    >
        <EditText
            android:id="@+id/filter_amount_start"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:hint="@string/filter_lower_hint"
            android:textSize="14sp"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/filter_amount_end"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:hint="@string/filter_upper_hint"
            android:textSize="14sp"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/filter_tags_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="7dp"
            android:textSize="14sp"
            android:text="@string/tags_button_expense"
            android:textColor="?attr/colorPrimaryVariant" />
    </LinearLayout>

    <Button
        android:id="@+id/filter_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/filter_apply"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/form_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_submit">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/no_expense_yet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_expense"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/form_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>