...
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/euro_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="right"
            android:inputType="number"
            android:textColor="@color/dark_green"
...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FormLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@id/save_button_income"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EuroLayout">

        <TextView
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/date_input_field_income"/>

        <EditText
            android:id="@+id/date_input_field_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
...

        <TextView
            android:id="@+id/account_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_account"
            app:layout_constraintBottom_toTopOf="@id/account_input_field_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_input_field_income" />

        <EditText
            android:id="@+id/account_input_field_income"
...

        <TextView
            android:id="@+id/category_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            app:layout_constraintBottom_toTopOf="@id/category_input_field_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_input_field_income" />

        <EditText
            android:id="@+id/category_input_field_income"
...

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            app:layout_constraintBottom_toTopOf="@id/description_input_field_income"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_input_field_income" />

        <EditText
            android:id="@+id/description_input_field_income"
...
